--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HackerRank</title>
+  <title>HackerRank Problem Solving</title>
 </head>
 <body>
   <h2>Open Your Console on Browser</h2>
